# ML-AI-Tutor

./: .gitignore  README.md  pyproject.toml  概念構想 #2 55d461c939234267ae6f7784990cb1b8.md
Codes/: LCEL.ipynb  agent.ipynb  chat_interface.py  langraph.ipynb  rag.ipynb  tool.ipynb
Homeworks/: HW1 - H-ZeroAccess.ipynb  HW2 - H-ZeroAccess.ipynb
Texbooks/Class 1 - Google Colab/: Markdown_Guide.ipynb  Welcome_to_Colaboratory.ipynb
Texbooks/Class 2 - Python/: P01_PythonLanguageReference.ipynb
Texbooks/Class 3 - Pandas & Numpy/: P04_1_Pandas(Lite).ipynb  P04_Pandas.ipynb  P05_Numpy.ipynb
Texbooks/Class 3 - Pandas & Numpy & Matplotlib/: P07_Seaborn.ipynb
Texbooks/Class 4 - Data Science/: D01_Data Science Intro.ipynb  D02_Data Collection.ipynb  D03_EDA.ipynb  D03_Type of Data.ipynb  D05_Data Preprocess.ipynb
Texbooks/Class 5 - Visualization/: V02_1_Matplotlib(Lite).ipynb  V02_Matplotlib.ipynb  V03_1_Seaborn(Lite).ipynb  V03_Seaborn.ipynb  V04_Plotly.ipynb
Texbooks/Class 6 - Cybersecurity/: C01_Cybersecurity Intro.ipynb  C02_Anomaly Detection.ipynb
Texbooks/Class 7 - ML-AI Basics/: A01_AI Overview.ipynb  A02_AI Tasks.ipynb  A03_Learning Strategies.ipynb  A05_Loss Function.ipynb  A06_Optimizer.ipynb  A07_Information Measures.ipynb
Texbooks/Class 7 - ML-AI Model/: A01_AI Overview.ipynb  A02_AI Tasks.ipynb  A03_Learning Strategies.ipynb  A05_Model Structure-Linear model.ipynb  A06_Model Structure-Tree.ipynb
Texbooks/Class 8 - ML Models/: ML01_Linear model.ipynb  ML02_Tree.ipynb
Texbooks/Class Notes/: After Class Notes #1.md  After Class Notes #2.md
