[tool.poetry]
name = "ml&ai tutor"
version = "0.1.0"
description = ""
authors = ["Stephenworkplace <139206587+hanyuany14@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
