[tool.poetry]
name = "ml&ai tutor"
version = "0.1.0"
description = ""
authors = ["Stephenworkplace <139206587+hanyuany14@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.7"
streamlit = "^1.40.0"
unstructured = "^0.16.5"
libmagic = "^1.0"
pypdf = "^5.1.0"
pdf2image = "^1.17.0"
nltk = "^3.9.1"
faiss-cpu = "^1.9.0"
grandalf = "^0.8"
langchain-community = "^0.3.8"
langchain-openai = "^0.2.10"
langchain-core = "^0.3.21"
langgraph = "^0.2.53"
tavily-python = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
